@@ -1,3 +1,8 @@
+846.	[bug]		fdupont
+	Fixed subdir-objects warnings from recent versions of autotools,
+	e.g., on Apple OSX.
+	(Trac #3162, git ...)
+
 845.	[func]		marcin
 	Implemented Host class for storing information about IPv4 and IPv6
 	reservations for the host.
